--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
+# Ignore all __pycache__ directories
 __pycache__/
-**/migrations/*
-!**/migrations/__init__.py
-registration
+
+# Ignore all migrations directories
+migrations/
