--- a/MisplaceAI/docker-compose.yml
+++ b/MisplaceAI/docker-compose.yml
@@ -1,17 +1,21 @@
-#docker-compose.yml
 version: '3.7'
 
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8080
     volumes:
       - .:/app
       - ./media:/app/media
     ports:
-      - "8000:8000"
+      - "8080:8080"
     depends_on:
       - db
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:8080/ || exit 1" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   db:
     image: mysql:5.7
@@ -22,6 +26,18 @@ services:
       MYSQL_ROOT_PASSWORD: rootpassword
     volumes:
       - mysql_data:/var/lib/mysql
+
+  ngrok:
+    image: wernight/ngrok
+    volumes:
+      - ./ngrok.yml:/home/ngrok/.ngrok2/ngrok.yml
+    command: ngrok start --all
+    depends_on:
+      web:
+        condition: service_healthy
+    ports:
+      - "4040:4040" # Expose Ngrok's web interface
+      - "8080" # Forward the port Django is running on through Ngrok
 
 volumes:
   mysql_data:
