--- a/MisplaceAI/requirements.txt
+++ b/MisplaceAI/requirements.txt
@@ -1,7 +1,7 @@
 Django==3.2
 mysqlclient==2.1.0
 Pillow==9.3.0
-tensorflow
+tensorflow==2.16.1
 opencv-python==4.5.5.64
 djangorestframework==3.12.4
 django-cors-headers==3.10.0
