--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@tensorflow/tfjs": "^3.9.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.0.0",
