--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ uploads/
 /uploads/
 
 /node_modules/
+
+MisplaceAI/rules/migrations/0001_initial.py
+MisplaceAI/rules/migrations/__pycache__/0001_initial.cpython-310.pyc
