--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ uploads/
 
 MisplaceAI/rules/migrations/0001_initial.py
 MisplaceAI/rules/migrations/__pycache__/0001_initial.cpython-310.pyc
+MisplaceAI/models
