Add Tests for Rules

--- a/MisplaceAI/pytest.ini
+++ b/MisplaceAI/pytest.ini
@@ -3,4 +3,5 @@ DJANGO_SETTINGS_MODULE = MisplaceAI.settings
 addopts = -v --ignore=MisplaceAI/models
 testpaths =
     rules/tests
- 
+filterwarnings =
+    ignore::django.utils.deprecation.RemovedInDjango41Warning
