--- a/MisplaceAI/pytest.ini
+++ b/MisplaceAI/pytest.ini
@@ -3,5 +3,6 @@ DJANGO_SETTINGS_MODULE = MisplaceAI.settings
 addopts = -v --ignore=MisplaceAI/models
 testpaths =
     rules/tests
+    user_dashboard/tests
 filterwarnings =
     ignore::django.utils.deprecation.RemovedInDjango41Warning
