Add tests for Detections

--- a/MisplaceAI/pytest.ini
+++ b/MisplaceAI/pytest.ini
@@ -2,7 +2,15 @@
 DJANGO_SETTINGS_MODULE = MisplaceAI.settings
 addopts = -v --ignore=MisplaceAI/models
 testpaths =
+    process_misplaced_manager/tests/misplacedTestAlgorithm/
     rules/tests
     user_dashboard/tests
+    process_misplaced_manager/tests/
+    
 filterwarnings =
     ignore::django.utils.deprecation.RemovedInDjango41Warning
+    ignore::DeprecationWarning:scipy.ndimage.filters
+    ignore::DeprecationWarning:numpy.*
+    ignore::DeprecationWarning:tensorflow.*
+    ignore:.*textsize is deprecated and will be removed in Pillow 10.*:DeprecationWarning
+
