--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "mocha --require mocha-setup.js --require test-setup.js 'src/**/*.test.js'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,6 +42,19 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/register": "^7.14.5",
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "chai": "^4.4.1",
+    "chai-spies": "^1.1.0",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^24.1.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^9.1.3",
+    "sinon": "^18.0.0"
   }
 }
