--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.14.5",
