--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,12 @@ __pycache__/
 
 # Ignore all migrations directories
 migrations/
-
 /media/
 media/
-
-
+/models/
 uploads/
-
 /uploads/
-
 /node_modules/
-
 MisplaceAI/rules/migrations/0001_initial.py
 MisplaceAI/rules/migrations/__pycache__/0001_initial.cpython-310.pyc
 MisplaceAI/models
@@ -30,3 +25,4 @@ MisplaceAI/MisplaceAI/__pycache__/urls.cpython-310.pyc
 MisplaceAI/MisplaceAI/__pycache__/settings.cpython-310.pyc
 MisplaceAI/authentication/__pycache__/views.cpython-310.pyc
 MisplaceAI/authentication/__pycache__/urls.cpython-310.pyc
+MisplaceAI/models/
