--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ MisplaceAI/MisplaceAI/__pycache__/settings.cpython-310.pyc
 MisplaceAI/authentication/__pycache__/views.cpython-310.pyc
 MisplaceAI/authentication/__pycache__/urls.cpython-310.pyc
 MisplaceAI/models/
+
+MisplaceAI/ngrok.yml
